--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Instant.io - Streaming file transfer over WebTorrent</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="search" href="/opensearch.xml" title="Instant.io" type="application/opensearchdescription+xml">
-    <link rel="stylesheet" href="/main.css" charset="utf-8">
+    <script src="/app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" integrity="sha256-zIG416V1ynj3Wgju/scU80KAEWOsO5rRLfVyRDuOv7Q=" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -35,7 +35,6 @@
             <p><small>Powered by <a href="http://webtorrent.io" target="_blank">WebTorrent</a>. 100% open source &amp; free software. Works in Chrome, Firefox, and Opera. Source code available on <a href="https://github.com/webtorrent/instant.io" target="_blank">GitHub</a>. © 2017 WebTorrent, LLC.</small></p>
         </footer>
     </main>
-    <script src="/app.js"></script>
 </body>
 
 </html>
